# firepony

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  alignment_data.h  bam_loader.cpp  bam_loader.cu  bam_loader.h  baq-cpu.cu  baq.cu  baq.h  bqsr.cu  bqsr_context.cu  bqsr_context.h  bqsr_types.h  build_info.h.in  cigar.cu  cigar.h  command_line.cu  command_line.h  covariates.cu  covariates.h  covariates_bit_packing.h  covariates_table.h  filters.cu  filters.h  firepony-loader.cu  firepony-vcf-convert.cu  firepony.cu  gamgee_loader.cu  gamgee_loader.h  gcc.cmake  index.html  io_thread.cu  io_thread.h  mmap.cu  mmap.h  output.cu  (+21 more)
bqsr/: CMakeLists.txt  alignment_data.h  bam_loader.cu  bam_loader.h  baq-cpu.h  baq.cu  baq.h  bqsr-loader.cu  bqsr.cu  bqsr_context.cu  bqsr_context.h  bqsr_types.h  cigar.cu  cigar.h  covariates.cu  covariates.h  covariates_bit_packing.h  covariates_table.cu  covariates_table.h  filters.cu  fractional_errors.cu  gamgee_loader.cu  gamgee_loader.h  mmap.h  quantizer.cu  quantizer.h  read_filters.cu  sequence_data.cu  sequence_data.h  serialization.h  serialization_inl.h  snp_filter.cu  string_database.cu  string_database.h  util.cu  util.h  variant_data.cu  variant_data.h  variants.cu  variants.h
bqsr/covariates/: table_context.h  table_cycle_illumina.h
bqsr/covariates/bit_packers/: bit_packing.h  context.h  cycle_illumina.h  quality_score.h
bqsr/from_nvbio/: alphabet.h  bufferedtextfile.h  vcf.cu  vcf.h
bqsr/primitives/: packed_stream.h  packed_vector.h  parallel.h  util.h  vector.h
cmake-local/: FindCUDA.cmake  build_info.cmake
cmake-local/FindCUDA/: run_nvcc.cmake
contrib/: boost.cmake  cub.cmake  fix-boost-install.sh  gamgee-fix-cmake-version.patch  gamgee.cmake  htslib-disable-asserts.patch  htslib.cmake  tbb-disable-tsx.patch  tbb-install.sh  tbb.cmake  thrust.cmake  zlib.cmake
debian/: changelog  control  copyright  create-firepony-package.sh  files  filter-changelog.py  rules
device/: CMakeLists.txt  alignment_data.h  alignment_data_device.h  baq.cu  baq.h  bqsr_types.h  cigar.cu  cigar.h  covariate_table.cu  covariate_table.h  covariates.cu  covariates.h  covariates_table.cu  covariates_table.h  device_types.h  empirical_quality.cu  empirical_quality.h  expected_error.h  firepony_context.cu  firepony_context.h  fractional_errors.cu  fractional_errors.h  mmap.cu  mmap.h  options.cu  options.h  pipeline.cu  pipeline.h  pipeline_interface.cu  read_filters.cu  read_filters.h  read_group_table.cu  read_group_table.h  sequence_data.cu  sequence_data.h  sequence_data_device.h  serialization.h  serialization_inl.h  snp_filter.cu  snp_filter.h  (+7 more)
device/covariates/: packer_context.h  packer_cycle_illumina.h  packer_quality_score.h  table_context.h  table_cycle_illumina.h  table_quality_scores.h
device/covariates/bit_packers/: bit_packing.h  context.h  cycle_illumina.h  event_tracker.h  quality_score.h  read_group.h
device/from_nvbio/: alphabet.h  alphabet_inl.h  dna.h
device/primitives/: algorithms.h  backends.h  cuda.h  packed_stream.h  packed_stream_packer.h  packed_vector.h  parallel.h  timer.h  util.h  vector.h
diffreport/: diffreport.py  gatkreport.py  gatktable.py  textfile.py
firepony/: CMakeLists.txt  alignment_data.h  baq.cu  baq.h  bqsr_context.cu  bqsr_context.h  bqsr_types.h  cigar.cu  covariates.cu  covariates_table.h  firepony-loader.cu  firepony.cu  fractional_errors.cu  fractional_errors.h  gamgee_loader.cu  gamgee_loader.h  mmap.cu  options.cu  options.h  read_filters.cu  read_filters.h  read_group_table.cu  read_group_table.h  sequence_data.h  serialization.h  serialization_inl.h  snp_filter.cu  string_database.cu  string_database.h  util.cu  util.h
firepony/covariates/: table_context.h  table_cycle_illumina.h  table_quality_scores.h
firepony/covariates/bit_packers/: bit_packing.h  context.h  cycle_illumina.h  event_tracker.h  quality_score.h  read_group.h
firepony/from_nvbio/: alphabet.h  bufferedtextfile.h  dna.h
firepony/primitives/: algorithms.h  packed_stream_packer.h  packed_vector.h  parallel.h  util.h  vector.h
from_nvbio/: alphabet.h  alphabet_inl.h  bufferedtextfile.h  dna.h  vcf.cu  vcf.h
loader/: alignments.cu  alignments.h  reference.cu  reference.h  variants.cu  variants.h
primitives/: CMakeLists.txt  algorithms.h  cuda.h  packed_stream.h  packed_vector.h  parallel.h
rpm/: build-rpm-package.sh  firepony.spec
